--- a/_posts/2022-09-02-test.markdown
+++ b/_posts/2022-09-02-test.markdown
@@ -49,3 +49,10 @@ The `person`
 
 ![image](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1J-14pUXHNmS6MQ49hiI0M3YtZIixXZVAPw5g7BAQ&s)
 
+<span style="color: red">red
+<span style="color: blue">blue
+
+<figure align = "center">
+<img src="https://logos-world.net/wp-content/uploads/2020/11/GitHub-Emblem.png", style="width:100">
+<figcaption></b>Github Link</b></figcaption>
+</tigure>
